@@ -12,6 +12,7 @@
  - gmap on index page (goffy)
  - fixed bug in calendar page (goffy)
  - added check for dates from/to (goffy)
+ - fixed multiple primary mail accounts (goffy)
 
 ==============================================================
 1.0.4 RC1 [2022/08/29]
